--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.1'
+    compile 'org.scala-lang:scala-reflect:2.11.8'
     compile 'org.spongepowered:spongeapi:4.0.3'
 	    compile files('libs/SpongyNBT.jar')
     testCompile group: 'junit', name: 'junit', version: '4.11'
